Recuperados mis archivos

--- a/public/index-hold.html
+++ b/public/index-hold.html
@@ -5,19 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Chat</title>
+    <title>Programa de Colas</title>
 </head>
 
 <body>
+    <h1>Chat</h1>
+    <!-- Nombre -->
 
-
-
-
-
-    <script src="js/libs/jquery.min.js"></script>
-    <script src="socket.io/socket.io.js"></script>
-
-    <script src="js/chat.js"></script>
+    <!-- Sala -->
 
 </body>
 
